@@ -1,5 +1,6 @@
 <use name=Ig_Tools/IgHook>
 <Flags NO_LIB_CHECKING=yes>
+<Flags CXXFLAGS="-g -DIGPROF_DEBUG=0">
 <export>
  <use name=Ig_Tools/IgHook>
  <lib name=IgProf>
